--- a/backend-spring-boot/social-app/src/main/resources/application.properties
+++ b/backend-spring-boot/social-app/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/SOCIAL?useSSL=false&serverTimezone=GMT-6
-spring.datasource.username=root
-spring.datasource.password=2712
+spring.datasource.url=jdbc:mysql://52.15.178.31:3306/FSOCIETY?useSSL=false&serverTimezone=GMT-6
+spring.datasource.username=admin
+spring.datasource.password=admin123
