--- a/backend-spring-boot/social-app/src/main/resources/application.properties
+++ b/backend-spring-boot/social-app/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://3.22.230.92:3306/FSOCIETY?useSSL=false&serverTimezone=GMT-6
 spring.datasource.username=admin
 spring.datasource.password=admin123
