--- a/frontend-angular-2/social-network/package.json
+++ b/frontend-angular-2/social-network/package.json
@@ -29,8 +29,10 @@
     "@angular/router": "9.0.6",
     "@ng-bootstrap/ng-bootstrap": "6.0.0",
     "@popperjs/core": "^2.5.3",
+    "angularx-social-login": "^3.2.2",
     "bootstrap": "4.1.2",
     "core-js": "3.6.4",
+    "firebase": "^7.13.1",
     "jquery": "^3.2.1",
     "jw-bootstrap-switch-ng2": "2.0.1",
     "ng2-nouislider": "1.7.12",
@@ -38,8 +40,7 @@
     "popper.js": "1.14.4",
     "rxjs": "6.5.4",
     "rxjs-compat": "6.5.4",
-    "zone.js": "0.10.2",
-    "firebase": "^7.13.1"
+    "zone.js": "0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "0.900.6",
