--- a/frontend-angular-2/social-network/package.json
+++ b/frontend-angular-2/social-network/package.json
@@ -27,6 +27,7 @@
     "@angular/platform-browser": "9.0.6",
     "@angular/platform-browser-dynamic": "9.0.6",
     "@angular/router": "9.0.6",
+    "@auth0/angular-jwt": "^5.0.1",
     "@ng-bootstrap/ng-bootstrap": "6.0.0",
     "@popperjs/core": "^2.5.3",
     "@types/jwt-decode": "^2.2.1",
