--- a/frontend-angular-2/social-network/package.json
+++ b/frontend-angular-2/social-network/package.json
@@ -32,11 +32,11 @@
     "@popperjs/core": "^2.5.3",
     "@types/jwt-decode": "^2.2.1",
     "angularx-social-login": "^3.2.2",
-    "bootstrap": "4.1.2",
+    "bootstrap": "^4.1.2",
     "chart.js": "^2.9.4",
     "core-js": "3.6.4",
     "firebase": "^7.13.1",
-    "jquery": "^3.2.1",
+    "jquery": "^3.5.1",
     "jw-bootstrap-switch-ng2": "2.0.1",
     "jwt-decode": "^3.0.0",
     "ng2-nouislider": "1.7.12",
