--- a/frontend-angular-2/social-network/package.json
+++ b/frontend-angular-2/social-network/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "paper-kit-2-angular",
   "version": "1.3.0",
@@ -21,7 +20,7 @@
     "@angular/common": "9.0.6",
     "@angular/compiler": "9.0.6",
     "@angular/core": "9.0.6",
-    "@angular/fire": "^6.0.3",
+    "@angular/fire": "^6.0.0",
     "@angular/forms": "9.0.6",
     "@angular/http": "7.2.16",
     "@angular/localize": "^9.0.6",
@@ -30,6 +29,7 @@
     "@angular/router": "9.0.6",
     "@auth0/angular-jwt": "^5.0.1",
     "@ng-bootstrap/ng-bootstrap": "6.0.0",
+    "@ng-select/ng-select": "^4.0.4",
     "@popperjs/core": "^2.5.3",
     "@types/jwt-decode": "^2.2.1",
     "angularx-social-login": "^3.2.2",
